{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 56,
  "lineage": "b81329dd-bfa7-8caa-43dc-4d8294304cc5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0737874c3829acd42",
            "arn": "arn:aws:ec2:us-east-1:094155361417:elastic-ip/eipalloc-0737874c3829acd42",
            "domain": "vpc",
            "id": "eipalloc-0737874c3829acd42",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-83-0-61.compute-1.amazonaws.com",
            "public_ip": "54.83.0.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mlops-cluster-dev-eip-1"
            },
            "tags_all": {
              "Name": "mlops-cluster-dev-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094155361417:internet-gateway/igw-0afed62a9f3c275ed",
            "id": "igw-0afed62a9f3c275ed",
            "owner_id": "094155361417",
            "tags": {
              "Name": "mlops-cluster-dev-igw"
            },
            "tags_all": {
              "Name": "mlops-cluster-dev-igw"
            },
            "vpc_id": "vpc-0b5a30cdf2cd8186d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094155361417:route-table/rtb-0774d803defca0b83",
            "id": "rtb-0774d803defca0b83",
            "owner_id": "094155361417",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0afed62a9f3c275ed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mlops-cluster-dev-public-rt"
            },
            "tags_all": {
              "Name": "mlops-cluster-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5a30cdf2cd8186d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08117fe43dede9695",
            "route_table_id": "rtb-0774d803defca0b83",
            "subnet_id": "subnet-0015c38c43107f99f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bd9bd488f5ff085",
            "route_table_id": "rtb-0774d803defca0b83",
            "subnet_id": "subnet-03ea60562fdfefd94"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094155361417:security-group/sg-04b552484986b36c7",
            "description": "Security group for ALB/NLB",
            "egress": [],
            "id": "sg-04b552484986b36c7",
            "ingress": [],
            "name": "mlops-cluster-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "094155361417",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-cluster-dev-alb-sg"
            },
            "tags_all": {
              "Name": "mlops-cluster-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5a30cdf2cd8186d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094155361417:security-group/sg-06b36fa5c339b8278",
            "description": "Security group for EKS control plane",
            "egress": [],
            "id": "sg-06b36fa5c339b8278",
            "ingress": [],
            "name": "mlops-cluster-dev-control-plane-sg",
            "name_prefix": "",
            "owner_id": "094155361417",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-cluster-dev-control-plane-sg"
            },
            "tags_all": {
              "Name": "mlops-cluster-dev-control-plane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5a30cdf2cd8186d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094155361417:security-group/sg-023e26b50d3ced067",
            "description": "Security group for EKS worker nodes",
            "egress": [],
            "id": "sg-023e26b50d3ced067",
            "ingress": [],
            "name": "mlops-cluster-dev-nodes-sg",
            "name_prefix": "",
            "owner_id": "094155361417",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-cluster-dev-nodes-sg"
            },
            "tags_all": {
              "Name": "mlops-cluster-dev-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5a30cdf2cd8186d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3744827395",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04b552484986b36c7",
            "security_group_rule_id": "sgr-0eb4aa23b183c4400",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2443680219",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b552484986b36c7",
            "security_group_rule_id": "sgr-06dc0fb260768cb4d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1295828065",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b552484986b36c7",
            "security_group_rule_id": "sgr-004fa1cb064898242",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5000,
            "id": "sgrule-1827830872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b552484986b36c7",
            "security_group_rule_id": "sgr-009639808cdbbe2b1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8888,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-968998580",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b552484986b36c7",
            "security_group_rule_id": "sgr-0ec5a275378ce1a6f",
            "self": false,
            "source_security_group_id": "sg-023e26b50d3ced067",
            "timeouts": null,
            "to_port": 32767,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3749010175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06b36fa5c339b8278",
            "security_group_rule_id": "sgr-01b551ac01159f1cc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.control_plane",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_from_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3534949643",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06b36fa5c339b8278",
            "security_group_rule_id": "sgr-086a966f6ff7d1a08",
            "self": false,
            "source_security_group_id": "sg-023e26b50d3ced067",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.control_plane",
            "aws_security_group.nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2098581155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-023e26b50d3ced067",
            "security_group_rule_id": "sgr-09acb1e53064c9a08",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_from_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1025,
            "id": "sgrule-1866245902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-023e26b50d3ced067",
            "security_group_rule_id": "sgr-0603265e28966b14e",
            "self": false,
            "source_security_group_id": "sg-06b36fa5c339b8278",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.control_plane",
            "aws_security_group.nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2542634997",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-023e26b50d3ced067",
            "security_group_rule_id": "sgr-0daa484c71ac728ce",
            "self": false,
            "source_security_group_id": "sg-023e26b50d3ced067",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094155361417:subnet/subnet-0250c790ee4197771",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0250c790ee4197771",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "094155361417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mlops-cluster-dev-private-az1",
              "kubernetes.io/cluster/mlops-cluster-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "mlops-cluster-dev-private-az1",
              "kubernetes.io/cluster/mlops-cluster-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b5a30cdf2cd8186d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094155361417:subnet/subnet-088b78cd3e7b8630f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088b78cd3e7b8630f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "094155361417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mlops-cluster-dev-private-az2",
              "kubernetes.io/cluster/mlops-cluster-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "mlops-cluster-dev-private-az2",
              "kubernetes.io/cluster/mlops-cluster-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b5a30cdf2cd8186d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094155361417:subnet/subnet-0015c38c43107f99f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0015c38c43107f99f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "094155361417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mlops-cluster-dev-public-az1",
              "kubernetes.io/cluster/mlops-cluster-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "mlops-cluster-dev-public-az1",
              "kubernetes.io/cluster/mlops-cluster-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b5a30cdf2cd8186d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094155361417:subnet/subnet-03ea60562fdfefd94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ea60562fdfefd94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "094155361417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mlops-cluster-dev-public-az2",
              "kubernetes.io/cluster/mlops-cluster-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "mlops-cluster-dev-public-az2",
              "kubernetes.io/cluster/mlops-cluster-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b5a30cdf2cd8186d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094155361417:vpc/vpc-0b5a30cdf2cd8186d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01761c564555cfde5",
            "default_route_table_id": "rtb-0df6f528d7535bc2b",
            "default_security_group_id": "sg-0057c173c789dfedb",
            "dhcp_options_id": "dopt-0712bd45a8c029bcd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5a30cdf2cd8186d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df6f528d7535bc2b",
            "owner_id": "094155361417",
            "tags": {
              "Name": "mlops-cluster-dev-vpc"
            },
            "tags_all": {
              "Name": "mlops-cluster-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "evidently",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/evidently-service",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "evidently"
                },
                "name": "evidently-service",
                "namespace": "default",
                "resource_version": "972",
                "uid": "d5c3d3f4-f86c-4c9d-b9c1-dafd63d22828"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.30.12",
                "cluster_ips": [
                  "172.20.30.12"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 32674,
                    "port": 8000,
                    "protocol": "TCP",
                    "target_port": "8000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "evidently"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "ad5c3d3f4f86c4c9db9c1dafd63d2282-1814036479.us-east-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "evidently-service",
            "namespace": "default"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_security_group.control_plane",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "iris_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/iris-service",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "iris-api"
                },
                "name": "iris-service",
                "namespace": "default",
                "resource_version": "999",
                "uid": "3ab2859d-b7c8-4305-9d14-f20eb5b979cd"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.229.58",
                "cluster_ips": [
                  "172.20.229.58"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 31622,
                    "port": 8000,
                    "protocol": "TCP",
                    "target_port": "8000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "iris-api"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a3ab2859db7c843059d14f20eb5b979c-1740778574.us-east-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "iris-service",
            "namespace": "default"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_security_group.control_plane",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "mlflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/mlflow-service",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "mlflow"
                },
                "name": "mlflow-service",
                "namespace": "default",
                "resource_version": "953",
                "uid": "4c8dbc3f-1461-498a-a433-7a68f346a4be"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.166.15",
                "cluster_ips": [
                  "172.20.166.15"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 32328,
                    "port": 5000,
                    "protocol": "TCP",
                    "target_port": "5000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "mlflow"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a4c8dbc3f1461498aa4337a68f346a4b-2034618966.us-east-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "mlflow-service",
            "namespace": "default"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_security_group.control_plane",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "workspace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/workspace-service",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "workspace"
                },
                "name": "workspace-service",
                "namespace": "default",
                "resource_version": "985",
                "uid": "6dbadafd-0d70-4cc1-8d8e-eb7a8a90a4ca"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.132.11",
                "cluster_ips": [
                  "172.20.132.11"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 30747,
                    "port": 8888,
                    "protocol": "TCP",
                    "target_port": "8888"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "workspace"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a6dbadafd0d704cc18d8eeb7a8a90a4c-1937304482.us-east-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "workspace-service",
            "namespace": "default"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_security_group.control_plane",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.main"
          ]
        }
      ]
    }
  ]
}